--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "manifest_version": 2,
 
   "name": "__MSG_extensionName__",
-  "short_name": "FbTREX",
+
+  "short_name": "ytTREX",
   "description": "__MSG_extensionDescription__",
   "version": "0.0.2",
   "author": "Claudio Agosti",
