--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "scripts": {
     "lint": "eslint ./",
-    "build": "rimraf ./build && cross-env webpack && cp -r popup.html manifest.json icons/* _locales/ ./build/",
+    "build": "rimraf ./build && cross-env webpack && cp -r popup.html manifest.json icons/* ./build/",
     "start": "npm run build:watch:files",
     "build:watch": "cross-env node dev-server.js",
-    "build:watch:files": "rimraf ./build && mkdir build && cp -r manifest.json icons/* _locales/ popup.html ./build/ && cross-env webpack -w",
+    "build:watch:files": "rimraf ./build && mkdir build && cp -r manifest.json icons/* popup.html ./build/ && cross-env webpack -w",
     "build:dist": "./pack-extension.sh || true",
     "clean": "rimraf ./build ./dist",
     "test": "mocha --compilers js:babel-register --reporter spec",
