--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,12 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "bs58": "^3.1.0",
-    "cheerio": "^0.22.0",
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "jquery": "^3.0.0",
+    "jsdom": "^12.0.0",
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongodb": "^2.1.8",
@@ -28,7 +29,6 @@
     "nodemon": "^1.10.0",
     "pug": "^2.0.0-beta11",
     "request": "^2.75.0",
-    "jquery": "^3.0.0",
     "stylus": "^0.54.5",
     "tweetnacl": "^0.14.3"
   }
