--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 
   "short_name": "ytTREX",
   "description": "This browser extension is a minor experiment we are conducting, it is not yet intended for mainstream usage",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "author": "Claudio Agosti",
 
   "icons": {
@@ -23,7 +23,7 @@
   "permissions": [
     "storage",
     "cookies",
-    "http://localhost:8000/",
+    "http://localhost:9000/",
     "https://*.youtube.com/",
     "https://*.tracking.exposed/"
   ],
@@ -35,7 +35,12 @@
 
   "content_scripts": [
     {
-      "matches": ["https://*.youtube.com/*"],
+      "matches": [
+          "http://localhost/*",
+          "http://127.0.0.1/*",
+          "https://*.tracking.exposed/*",
+          "https://*.youtube.com/*"
+      ],
       "js": ["./app.js"]
     }
   ],
