--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "food-words": "^1.1.0",
     "jquery": "^3.0.0",
     "jsdom": "^12.0.0",
     "lodash": "^4.17.11",
