many progress for divergency, handshake, text, linker

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -3,7 +3,8 @@
       "supporters": "supporters",
       "videos": "videos",
       "alarms": "alarms",
-      "sequences": "sequences"
+      "sequences": "sequences",
+      "commitments": "commitments"
   },
   "mongodb": "mongodb://localhost/yttrex",
   "port": 9000,
