--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
     "debug": "^2.2.0",
+    "elasticsearch": "^15.4.1",
     "express": "^4.14.0",
     "food-words": "^1.1.0",
+    "harmony-reflect": "^1.6.1",
     "jquery": "^3.0.0",
     "jsdom": "^12.0.0",
     "lodash": "^4.17.11",
