glued ytparserv and rebooted project ready to delivah

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -4,7 +4,8 @@
       "videos": "videos",
       "alarms": "alarms",
       "sequences": "sequences",
-      "commitments": "commitments"
+      "commitments": "commitments",
+      "metadata": "metadata"
   },
   "mongodb": "mongodb://localhost/yttrex",
   "port": 9000,
