--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,15 @@
 {
   "name": "youtube-trex-backend",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "youtube.tracking.exposed → backend data collector, to investigate personalization algorithms",
-  "main": "app.js",
   "scripts": {
     "build": "./build.sh",
-    "watch": "nodemon --config config/nodeamon.json app",
-    "start": "DEBUG=lib:*,-yttrex node app"
+    "watch": "nodemon --config config/nodeamon.json yttrex",
+    "start": "DEBUG=lib:*,-yttrex node yttrex",
+    "parserv": "DEBUG=*,-lib:mongo:* node ytparserv"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/yttrex/graphs/contributors",
-  "license": "GPL-3.0",
+  "license": "AGPL-3.0",
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "^1.15.2",
