--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,17 @@
 {
   "name": "youtube-trex-backend",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "youtube.tracking.exposed → backend data collector, to investigate personalization algorithms",
   "scripts": {
-    "build": "./build.sh",
-    "watch": "nodemon --config config/nodemon.json yttrex",
-    "start": "DEBUG=lib:*,-yttrex node yttrex",
-    "parserv": "DEBUG=*,-lib:mongo* node ytparserv"
+    "watch": "nodemon --config config/nodemon.json bin/server",
+    "start": "DEBUG=lib:*,-yttrex node bin/server",
+    "parserv": "DEBUG=*,-lib:mongo* node bin/ytparserv"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "^1.15.2",
-    "bootstrap": ">=4.3.1",
     "bs58": "^3.1.0",
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
@@ -22,17 +20,19 @@
     "express": "^4.14.0",
     "food-words": "^1.1.0",
     "harmony-reflect": "^1.6.1",
-    "jquery": "^3.0.0",
-    "jsdom": "^12.0.0",
-    "lodash": "^4.17.11",
     "moment": "^2.14.1",
-    "mongodb": "^2.1.8",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "nodemon": "^1.18.9",
-    "pug": "^2.0.0-beta11",
     "request": "^2.75.0",
-    "stylus": "^0.54.5",
-    "tweetnacl": "^0.14.3"
+    "tweetnacl": "^0.14.3",
+    "mongodb2": "npm:mongodb@^2.1.8",
+    "mongodb3": "npm:mongodb@3.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9",
+    "jsdom": "^13.0.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
