--- a/backend/package.json
+++ b/backend/package.json
@@ -26,13 +26,14 @@
     "jsdom": "^12.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.14.1",
-    "mongodb": "^2.1.8",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "nodemon": "^1.18.9",
     "pug": "^2.0.0-beta11",
     "request": "^2.75.0",
     "stylus": "^0.54.5",
-    "tweetnacl": "^0.14.3"
+    "tweetnacl": "^0.14.3",
+    "mongodb2": "npm:mongodb@^2.1.8",
+    "mongodb3": "npm:mongodb@3.2.3"
   }
 }
