--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.2",
   "description": "youtube.tracking.exposed → backend data collector, to investigate personalization algorithms",
   "scripts": {
-    "build": "./build.sh",
-    "watch": "nodemon --config config/nodemon.json yttrex",
-    "start": "DEBUG=lib:*,-yttrex node yttrex",
-    "parserv": "DEBUG=*,-lib:mongo* node ytparserv"
+    "watch": "key=fuffa nodemon --config config/nodemon.json bin/server",
+    "start": "DEBUG=lib:*,-yttrex node bin/server",
+    "parserv": "DEBUG=*,-lib:mongo* node bin/parser"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
@@ -29,9 +28,7 @@
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "nodemon": "^1.18.9",
-    "pug": "^2.0.0-beta11",
     "request": "^2.75.0",
-    "stylus": "^0.54.5",
     "tweetnacl": "^0.14.3",
     "mongodb2": "npm:mongodb@^2.1.8",
     "mongodb3": "npm:mongodb@3.2.3"
