--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -5,7 +5,8 @@
       "alarms": "alarms",
       "sequences": "sequences",
       "commitments": "commitments",
-      "metadata": "metadata"
+      "metadata": "metadata",
+      "stats": "stats"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
