implemented tests for video tagging

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -13,8 +13,7 @@
   "mongoDb": "yttrex",
   "port": 9000,
 
-  "tabtime": 20,
-
+  "storage": "htmls",
   "interface": "0.0.0.0",
   "key": "invalid_default"
 }
