--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 *.sublime-workspace
 *.sublime-workspace
 
+*.swp
+
 extension.zip
 
 .env
@@ -20,6 +22,7 @@ docs/*
 backend/htmls/*
 backend/dist/*
 backend/farfalla/*
+backend/_test_htmls/*
 
 node_modules/*
 backend/node_modules/*
