--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -1,12 +1,12 @@
 {
-  "schema": { 
+  "schema": {
       "supporters": "supporters",
       "videos": "videos",
       "alarms": "alarms",
       "sequences": "sequences",
       "commitments": "commitments",
       "metadata": "metadata",
-      "stats": "stats"
+      "stats": "trexstats"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
