updating workflow of tags and groups, fixing API as per #13

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -6,7 +6,8 @@
       "sequences": "sequences",
       "commitments": "commitments",
       "metadata": "metadata",
-      "stats": "trexstats"
+      "stats": "trexstats",
+      "groups": "groups"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
