implement v2 API, htmls format, wip parserv2

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -3,8 +3,7 @@
       "supporters": "supporters",
       "videos": "videos",
       "alarms": "alarms",
-      "sequences": "sequences",
-      "commitments": "commitments",
+      "htmls": "htmls",
       "metadata": "metadata",
       "stats": "trexstats",
       "groups": "groups"
