--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,9 +4,9 @@
   "name": "ytTREX",
 
   "short_name": "ytTREX",
-  "description": "This browser extension is a minor experiment we are conducting, it is not yet intended for mainstream usage",
-  "version": "1.2.1",
-  "author": "challenge algorithms and big data monopolist with https://tracking.exposed",
+  "description": "A tool for academic researchers to analyze the algorithm of the most popular video portal.",
+  "version": "1.2.2",
+  "author": "The team of https://tracking.exposed",
 
   "icons": {
       "16": "yttrex16.png",
