fixed videoId parsing and a small HTML parsing bug

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
     "watch": "key=fuffa elastic=disabled nodemon DEBUG=lib:*,yttrex --config config/nodemon.json bin/server",
-    "start": "elastic=disabled DEBUG=*,-lib:mongo node bin/server",
+    "start": "elastic=disabled DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server",
     "parserv": "elastic=disabled DEBUG=* node bin/parserv"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
