--- a/extension/package.json
+++ b/extension/package.json
@@ -12,15 +12,14 @@
   },
   "scripts": {
     "lint": "eslint ./",
-    "build": "rimraf ./build && cross-env webpack && cp -r src/popup/* manifest.json icons/* ./build/",
+    "build": "rm -rf ./build && md build && cross-env webpack && cp -r src/popup/* manifest.json icons/* ./build/",
     "start": "npm run build:watch:files",
     "build:watch": "cross-env node dev-server.js",
     "build:watch:files": "rimraf ./build && mkdir build && cp -r manifest.json icons/* src/popup/* ./build/ && cross-env webpack -w",
     "build:dist": "./pack-extension.sh || true",
-    "clean": "rimraf ./build ./dist",
+    "clean": "rm -rf ./build ./dist",
     "test": "mocha --compilers js:babel-register --reporter spec",
-    "test:watch": "mocha -w --compilers js:babel-register --reporter spec",
-    "docs": "rimraf ./docs && ./build-docs.sh"
+    "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -41,7 +40,6 @@
     "chai": "^3.5.0",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
-    "docco": "^0.7.0",
     "dotenv": "^2.0.0",
     "eslint": "^5.6.0",
     "eslint-config-ascribe-react": "^1.4.0",
@@ -56,7 +54,6 @@
     "node-sass": "^4.9.2",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
-    "rimraf": "^2.6.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.2",
     "webpack": "=2.1.0-beta.17",
