--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,7 @@ backend/dist/*
 backend/farfalla/*
 backend/node_modules/*
 
-methodology/*.dump/*
+methodology/snaps/*
+methodology/geckodriver.log
+methodology/config/*
+methodology/profiles/*
