--- a/backend/package.json
+++ b/backend/package.json
@@ -21,13 +21,14 @@
     "food-words": "^1.1.0",
     "harmony-reflect": "^1.6.1",
     "moment": "^2.14.1",
+    "mongodb2": "npm:mongodb@^2.1.8",
+    "mongodb3": "npm:mongodb@3.2.3",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "nodemon": "^1.18.9",
+    "numeral": "^2.0.6",
     "request": "^2.75.0",
-    "tweetnacl": "^0.14.3",
-    "mongodb2": "npm:mongodb@^2.1.8",
-    "mongodb3": "npm:mongodb@3.2.3"
+    "tweetnacl": "^0.14.3"
   },
   "devDependencies": {
     "jsdom": "^13.0.0",
