--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "youtube-trex-backend",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "key=fuffa elastic=disabled nodemon DEBUG=lib:*,yttrex --config config/nodemon.json bin/server",
-    "start": "elastic=disabled DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server",
-    "parserv": "elastic=disabled DEBUG=* node bin/parserv2"
+    "watch": "key=fuffa nodemon DEBUG=lib:*,yttrex --config config/nodemon.json bin/server --elastic=disabled",
+    "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server --elastic=disabled",
+    "parserv": "DEBUG=* node bin/parserv2 --elastic=disabled"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
@@ -19,7 +19,6 @@
     "elasticsearch": "^15.4.1",
     "express": "^4.14.0",
     "food-words": "^1.1.0",
-    "harmony-reflect": "^1.6.1",
     "moment": "^2.14.1",
     "mongodb2": "npm:mongodb@^2.1.8",
     "mongodb3": "npm:mongodb@3.2.3",
