fix(eslint): stylistic rules as warning

--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -30,7 +30,7 @@
     "block-spacing": [2, "always"],
     "brace-style": [2, "1tbs", { "allowSingleLine": true }],
     "camelcase": [2, { "properties": "never" }],
-    "comma-dangle": [2, "never"],
+    "comma-dangle": [1, "never"],
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
     "constructor-super": 2,
@@ -39,8 +39,8 @@
     "eol-last": 2,
     "eqeqeq": [2, "allow-null"],
     "func-call-spacing": [2, "never"],
-    "handle-callback-err": [2, "^(err|error)$" ],
-    "indent": [2, 4, { "SwitchCase": 1 }],
+    "handle-callback-err": [2, "^(err|error)$"],
+    "indent": [0, 4, { "SwitchCase": 1 }],
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "keyword-spacing": [2, { "before": true, "after": true }],
     "new-cap": [2, { "newIsCap": true, "capIsNew": false }],
@@ -82,7 +82,7 @@
     "no-mixed-spaces-and-tabs": 2,
     "no-multi-spaces": 2,
     "no-multi-str": 2,
-    "no-multiple-empty-lines": [2, { "max": 1 }],
+    "no-multiple-empty-lines": [1, { "max": 1 }],
     "no-native-reassign": 2,
     "no-negated-in-lhs": 2,
     "no-new": 2,
@@ -117,7 +117,7 @@
     "no-unreachable": 2,
     "no-unsafe-finally": 2,
     "no-unsafe-negation": 2,
-    "no-unused-vars": [2, { "vars": "all", "args": "none" }],
+    "no-unused-vars": [1, { "vars": "all", "args": "none" }],
     "no-useless-call": 2,
     "no-useless-computed-key": 2,
     "no-useless-constructor": 2,
@@ -127,18 +127,37 @@
     "no-with": 2,
     "object-property-newline": [2, { "allowMultiplePropertiesPerLine": true }],
     "one-var": [2, { "initialized": "never" }],
-    "operator-linebreak": [2, "after", { "overrides": { "?": "before", ":": "before" } }],
-    "padded-blocks": [2, "never"],
-    "quotes": [2, "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
+    "operator-linebreak": [
+      2,
+      "after",
+      { "overrides": { "?": "before", ":": "before" } }
+    ],
+    "padded-blocks": [1, "never"],
+    "quotes": [
+      1,
+      "single",
+      { "avoidEscape": true, "allowTemplateLiterals": true }
+    ],
     "rest-spread-spacing": [2, "never"],
-    "semi": [2, "always"],
+    "semi": [1, "always"],
     "semi-spacing": [2, { "before": false, "after": true }],
-    "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, "always"],
-    "space-in-parens": [2, "never"],
-    "space-infix-ops": 2,
-    "space-unary-ops": [2, { "words": true, "nonwords": false }],
-    "spaced-comment": [2, "always", { "line": { "markers": ["*package", "!", ","] }, "block": { "balanced": true, "markers": ["*package", "!", ","], "exceptions": ["*"] } }],
+    "space-before-blocks": [1, "always"],
+    "space-before-function-paren": [1, "always"],
+    "space-in-parens": [1, "never"],
+    "space-infix-ops": 1,
+    "space-unary-ops": [1, { "words": true, "nonwords": false }],
+    "spaced-comment": [
+      1,
+      "always",
+      {
+        "line": { "markers": ["*package", "!", ","] },
+        "block": {
+          "balanced": true,
+          "markers": ["*package", "!", ","],
+          "exceptions": ["*"]
+        }
+      }
+    ],
     "template-curly-spacing": [2, "never"],
     "unicode-bom": [2, "never"],
     "use-isnan": 2,
