--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "youtube-trex-backend",
-  "version": "1.3.0",
+  "name": "yttrex-backend",
+  "version": "1.3.2",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
     "watch": "key=fuffa nodemon DEBUG=lib:*,yttrex --config config/nodemon.json bin/server --elastic=disabled",
