--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.2",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "key=fuffa nodemon DEBUG=lib:*,yttrex --config config/nodemon.json bin/server --elastic=disabled",
+    "watch": "node_modules/.bin/nodemon --config config/nodemon.json bin/server --elastic=disabled --key=fuffa --DEBUG=lib:*,yttrex",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server --elastic=disabled",
     "parserv": "DEBUG=* node bin/parserv2 --elastic=disabled",
     "t:lib": "mocha tests/lib/*"
