--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.2",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "node_modules/.bin/nodemon --config config/nodemon.json bin/server --elastic=disabled --key=fuffa --DEBUG=lib:*,yttrex",
+    "watch": "node ./node_modules/nodemon/bin/nodemon --config config/nodemon.json bin/server --elastic=disabled --key=fuffa --DEBUG=lib:*,yttrex",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server --elastic=disabled",
     "parserv": "DEBUG=* node bin/parserv2 --elastic=disabled",
     "t:lib": "mocha tests/lib/*"
@@ -21,17 +21,16 @@
     "express": "^4.14.0",
     "food-words": "^1.1.0",
     "moment": "^2.14.1",
-    "mongodb2": "npm:mongodb@^2.1.8",
     "mongodb3": "npm:mongodb@3.2.3",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
-    "nodemon": "^2.0.2",
     "numeral": "^2.0.6",
     "request": "^2.75.0",
     "tweetnacl": "^0.14.3"
   },
   "devDependencies": {
     "jsdom": "^13.0.0",
+    "nodemon": "^2.0.2",
     "chai": "^4.2.0",
     "mocha": "^5.2.0"
   }
