integrated new label watcher in backend

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -2,6 +2,7 @@
   "schema": {
       "supporters": "supporters",
       "htmls": "htmls",
+      "labels": "labels",
       "metadata": "metadata",
       "stats": "trexstats",
       "groups": "groups"
