extended collection of missingWords and improved displayTime/extendedTime mining

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -5,7 +5,8 @@
       "labels": "labels",
       "metadata": "metadata",
       "stats": "trexstats",
-      "groups": "groups"
+      "groups": "groups",
+      "ytnl": "ytnl"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
