--- a/extension/package.json
+++ b/extension/package.json
@@ -1,11 +1,11 @@
 {
   "name": "yttrex",
   "version": "1.4.0",
-  "description": "yttrex is the extension + backend for youtube algorithm analysis. This is part of the https://tracking.exposed plan",
-  "homepage": "https://github.com/tracking-exposed/yttrex/",
+  "description": "yttrex is the extension + backend for youtube algorithm analysis. This is part of the https://tracking.exposed umbrella project",
+  "homepage": "https://youtube.tracking.exposed",
   "bugs": "https://github.com/tracking-exposed/yttrex/issues",
-  "license": "GPL-3.0",
-  "author": "Claudio Agosti",
+  "license": "AGPL-3.0",
+  "author": "Claudio Agosti, Alberto Granzotto, and the tracking exposed team",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tracking-exposed/yttrex.git"
@@ -38,7 +38,7 @@
     "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
     "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^3.5.3",
     "dotenv": "^2.0.0",
     "eslint": "^5.6.0",
     "eslint-config-ascribe-react": "^1.4.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-standard": "^2.3.1",
     "extract-text-webpack-plugin": "=2.0.0-beta.1",
     "glob": "^7.1.3",
-    "mocha": "^5.2.0",
+    "mocha": "^7.2.0",
     "postcss-loader": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.2",
@@ -60,17 +60,18 @@
     "write-file-webpack-plugin": "^3.3.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "bs58": "^3.0.0",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.6",
-    "core-js": "^2.5.7",
+    "create-react-class": "^15.6.3",
     "immutability-helper": "^2.8.1",
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
     "marked": "^0.8.1",
-    "material-ui": "^0.20.2",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "tweetnacl": "^0.14.3",
     "tweetnacl-util": "^0.13.3",
     "uuid": "^2.0.3"
