implemented search analysis. parsing and datamodel in beta

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -6,6 +6,7 @@
       "metadata": "metadata",
       "stats": "trexstats",
       "groups": "groups",
+      "searches": "searches",
       "ytnl": "ytnl"
   },
   "mongoHost": "localhost",
