--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,8 +5,8 @@
 
   "short_name": "ytTREX",
   "description": "A tool for academic researchers. Part of the tracking.exposed project, is meant to analyze the algorithm of a popular video portal.",
-  "version": "1.4.2",
-  "author": "The team of https://tracking.exposed",
+  "version": "1.4.3",
+  "author": "The team of Tracking Exposed",
 
   "icons": {
       "16": "yttrex16.png",
