added in .gitignore files v7 CSV and JSON when generated in backend/

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ methodology/profiles/*
 extension/node_modules/*
 backend/node_modules/*
 react-pieces/node_modules/*
+
+backend/*v7.csv
+backend/*v7.json
