saving longlabel errors into a DB

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -7,7 +7,7 @@
       "stats": "trexstats",
       "groups": "groups",
       "searches": "searches",
-      "ytnl": "ytnl"
+      "errors": "errors"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
