--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -2,10 +2,11 @@
   "schema": {
       "supporters": "supporters",
       "htmls": "htmls",
-      "labels": "labels",
       "metadata": "metadata",
       "stats": "trexstats",
       "groups": "groups",
+      "labels": "labels",
+      "queries": "queries",
       "searches": "searches",
       "errors": "errors"
   },
