--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -7,6 +7,7 @@
       "groups": "groups",
       "labels": "labels",
       "queries": "queries",
+      "campaigns": "campaigns",
       "searches": "searches",
       "errors": "errors"
   },
