--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server --elastic=disabled",
     "parserv": "DEBUG=* node bin/parserv2.js",
     "searches": "DEBUG=* node bin/searches.js",
-    "t:lib": "mocha tests/lib/*"
+    "t:lib": "mocha tests/lib/*",
+    "test": "mocha tests/basic/*"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
@@ -33,6 +34,6 @@
     "chai": "^4.2.0",
     "jsdom": "^13.0.0",
     "mocha": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.5"
   }
 }
