fixed bugs after creation of bin/shared.py

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ methodology/snaps/*
 methodology/geckodriver.log
 methodology/config/*
 methodology/profiles/*
+methodology/bin/*.pyc
 
 extension/node_modules/*
 backend/node_modules/*
