--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ extension/node_modules/*
 methodology/config/*
 methodology/profiles/*
 methodology/node_modules/*
+methodology/extension/*
 
 extension/node_modules/*
 backend/node_modules/*
