added draghi1 campaign, algined campaign, updated methodology/README.md from automation.md

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.0",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "elastic=disabled key=fuffa DEBUG=lib:*,yttrex ./node_modules/nodemon/bin/nodemon.js --config config/nodemon.json bin/server",
+    "watch": "key=fuffa DEBUG=lib:*,yttrex ./node_modules/nodemon/bin/nodemon.js --config config/nodemon.json bin/server",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server --elastic=disabled",
     "parserv": "DEBUG=* node bin/parserv2.js",
     "searches": "DEBUG=* node bin/searches.js",
