a few trims and fix

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "watch": "key=fuffa DEBUG=lib:*,routes:*,yttrex ./node_modules/nodemon/bin/nodemon.js --config config/nodemon.json bin/server",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server --elastic=disabled",
     "parserv": "DEBUG=* node bin/parserv2.js",
-    "searches": "DEBUG=* node bin/searches.js",
+    "searches": "echo 'remind this was crashing mongodb homeserv';DEBUG=* node bin/searches.js",
     "t:lib": "mocha tests/lib/*",
     "test": "mocha tests/basic/*",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed"
