--- a/backend/package.json
+++ b/backend/package.json
@@ -23,18 +23,14 @@
     "elasticsearch": "^15.4.1",
     "express": "^4.14.0",
     "food-words": "^1.1.0",
+    "jsdom": "^13.0.0",
     "moment": "^2.29.1",
     "mongodb3": "npm:mongodb@3.2.3",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
+    "nodemon": "^2.0.7",
     "numeral": "^2.0.6",
     "request": "^2.88.2",
     "tweetnacl": "^0.14.3"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "jsdom": "^13.0.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^2.0.6"
   }
 }
