--- a/methodology/package.json
+++ b/methodology/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "potrex-methodology",
-  "version": "1.0.0",
-  "description": "a series of tools for https://pornhub.tracking.exposed for reseachers",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "yttrex-automation",
+  "version": "1.1.0",
+  "description": "a tool for https://youtube.tracking.exposed for reseachers",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tracking-exposed/potrex.git"
+    "url": "git+https://github.com/tracking-exposed/yttrex.git"
   },
   "keywords": [
-    "pornhub",
+    "youtube",
     "algorithm",
     "analysis"
   ],
   "author": "Claudio Agosti and the TRex team",
   "license": "AGPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/tracking-exposed/potrex/issues"
-  },
-  "homepage": "https://github.com/tracking-exposed/potrex#readme",
+  "homepage": "https://github.com/tracking-exposed/yttrex#readme",
   "dependencies": {
     "debug": "^4.3.1",
     "lodash": "^4.17.21",
