--- a/methodology/package.json
+++ b/methodology/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "debug": "^4.3.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nconf": "^0.11.2",
     "node-fetch": "^2.6.1",
     "puppeteer": "^2.0.0",
