added collection 'experiments' and implemented experiments API

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -9,7 +9,8 @@
       "queries": "queries",
       "campaigns": "campaigns",
       "searches": "searches",
-      "errors": "errors"
+      "errors": "errors",
+      "experiments": "experiments"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
