--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.15.2",
     "bs58": "^3.1.0",
+    "chardet": "^1.3.0",
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
     "debug": "^2.2.0",
