extended guardoni API for config and retrievering

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -10,7 +10,8 @@
       "campaigns": "campaigns",
       "searches": "searches",
       "errors": "errors",
-      "experiments": "experiments2"
+      "experiments": "experiments2",
+      "guardoni": "guardoni"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
