small progress in answers management

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -11,7 +11,8 @@
       "searches": "searches",
       "errors": "errors",
       "experiments": "experiments2",
-      "guardoni": "guardoni"
+      "guardoni": "guardoni",
+      "answers": "answers"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
