small trimming in logging

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "key=fuffa DEBUG=*,-body-parser*,-express*,-follow-redirects ./node_modules/nodemon/bin/nodemon.js --config config/nodemon.json bin/server",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server",
-    "parserv": "DEBUG=* node bin/parserv2.js",
+    "parserv": "DEBUG=*,-parser:home:warning node bin/parserv2.js",
     "searches": "DEBUG=* node bin/searches.js",
     "t:lib": "mocha tests/lib/*",
     "test": "mocha tests/basic/*",
@@ -21,7 +21,6 @@
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
     "debug": "^2.2.0",
-    "elasticsearch": "^15.4.1",
     "express": "^4.14.0",
     "fetch-opengraph": "^1.0.25",
     "food-words": "^1.1.0",
